--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "week2-homework-group-ray-team",
-  "version": "1.0.0",
-  "description": "| 規則 | 說明 | |---|---| | 分組 | 以助教為分組單位 | | 製作頁數 | 小組人數 + 1 ( 不含教助 ) | | 每一頁 | 最上面需要有 Navbar 且每個頁面的 Navbar 風格需一致 | Navbar 內容 | 有 `首頁` 、 `各學員稱呼` 且以超連結呈現 | | 首頁 | 各學員 `放一張圖片` 加 對這兩周課程的建議或想說的 | | 學員個人頁 | 將上周作業 git 資料整理成 HTML ， 可以 CSS 、 JS 修飾 |",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ST2DE/week2-homework-group-ray-team.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ST2DE/week2-homework-group-ray-team/issues"
-  },
-  "homepage": "https://github.com/ST2DE/week2-homework-group-ray-team#readme",
   "dependencies": {
-    "bootstrap": "^4.1.0"
+    "bootstrap": "^4.1.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "pug": "2.0.0-beta11"
   }
 }
